overflow X fixed

--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 *{
     margin: 0;
     padding: 0;
     list-style: none;
     text-decoration: none;
+    /* box-sizing: border-box;
+    border: red solid 1px; */
+
 }
 body{
     line-height: 1.2rem;
@@ -18,25 +22,25 @@ body{
     opacity: 0;
     filter: blur(5px);
     transform: translateY(-100%);
-    transition: all 2s;
+    transition: all 3s;
 }
 .hidden-down{
     opacity: 0;
     filter: blur(5px);
     transform: translateY(100%);
-    transition: all 2s;
+    transition: all 3s;
 }
 .hidden-left{
     opacity: 0;
     filter: blur(5px);
     transform: translateX(-100%);
-    transition: all 2s;
+    transition: all 3s;
 }
 .hidden-right{
     opacity: 0;
     filter: blur(5px);
     transform: translateX(100%);
-    transition: all 2s;
+    transition: all 3s;
 }
 .show{
     opacity: 1;
@@ -378,7 +382,7 @@ footer p{
         border-radius: 50%;
         width: 20px;
         padding: 8px;
-        transition: 1s;
+        /* transition: 1s; */
     }
     .previous{
         left: 5vw;
